--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #f4f6f9;
     margin: 0;
     padding: 20px;
+    
 }
 
 
@@ -13,9 +14,19 @@ h1 {
 /* Productos */
 #contenedor-productos{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 200px));
     gap: 20px;
-    margin-bottom: 40px;
+    justify-content: center;
+    max-width: 700px;
+    margin: 0 auto 40px auto;
+}
+
+.producto img {
+    width: 100%;
+    height: 150px;
+    object-fit:cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
 }
 
 .producto {
@@ -26,6 +37,7 @@ h1 {
     text-align: center;
     transition: transform 0.2s ease;
 }
+
 
 .producto:hover {
     transform: scale(1.05);
@@ -46,16 +58,98 @@ h1 {
 
 /* Carro */
 
-#carrito {
+#abrir-carrito {
+    position: fixed;
+    top: 20px;
+    right: 100px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 12px 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+#carrito-popup {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+     justify-content: flex-end;
+    align-items: flex-start;
+    padding: 40px;
+    z-index: 999;
+}
+
+.carrito-contenido {
     background-color: white;
+    width: 350px;
+    max-height: 500px;
+    overflow-y: auto;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+}
+
+/* Botón cerrar */
+#cerrar-carrito {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#carrito {
+    
+      max-height: 450px;
+    overflow: hidden;
 
 }
 
-.item-carrito {
+#carrito-de-compras {
+    max-height: 300px;   /* Altura máxima para scroll */
+    overflow-y: auto;    /* Scroll vertical automatico */
+    padding-right: 10px; /* Espacio para que no choque con la barra */
+}
+
+/*estilod de scroll moderno*/
+#carrito-de-compras::-webkit-scrollbar {
+    width: 8px;
+}
+
+#carrito-de-compras::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+#carrito-de-compras::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+
+.item-carrito div {
+    flex: 1;
+}
+.item-carrito  {
+    display: flex;
+    gap: 15px;
+    align-items: center;
     border-bottom: 1px solid #ddd;
     padding: 10px 0;
+}
+
+.item-carrito img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
 }
 #boton-factura {
     margin-top: 15px;
@@ -67,7 +161,7 @@ h1 {
     cursor: pointer;
 }
 
-#boton-eliminar {
+.boton-eliminar {
     margin-top: 15px;
     background-color: #d30000;
     color: white;
